<resources>
    <!-- General -->
    <string name="app_name">Droidcon Berlin 2017</string>
    
    <!-- My Agenda -->
    <string name="my_agenda">My Agenda</string>
    <string name="undo">Undo</string>
    <string name="session_removed">Session removed</string>

    <!-- Schedule -->
    <string name="schedule">Schedule</string>
    <string name="content_desc_save_session">Save session</string>

    <!-- Info -->
    <string name="info">Info</string>
    <string name="droidcon">Droidcon</string>
    <string name="code_of_conduct">Code of conduct</string>
    <string name="venue">Venue</string>
    <string name="about_the_app">About the app</string>
    <string name="view_on_git_hub">View on GitHub</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>

    <!--Session detail-->
    <string name="stage">%s stage</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="session_is_about_to_start">Session is about to start</string>
    <string name="session_notification_message">%1$s is about to start on stage: %2$s</string>
    <string name="content_desc_speaker_icon">Speaker icon</string>

</resources>