<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--suppress AndroidUnknownAttribute -->
    <data class=".InfoBinding">

        <variable
            name="viewModel"
            type="com.arthurnagy.droidconberlin.feature.info.InfoViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            style="@style/AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/info" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/InfoHeader"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/info_header_height"
                    android:text="@string/droidcon" />

                <TextView
                    android:id="@+id/code_of_conduct"
                    style="@style/InfoItem"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/info_item_height"
                    android:text="@string/code_of_conduct" />

                <include layout="@layout/item_divider" />

                <TextView
                    android:id="@+id/venue"
                    style="@style/InfoItem"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/info_item_height"
                    android:text="@string/venue" />

                <TextView
                    style="@style/InfoHeader"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/info_header_height"
                    android:text="@string/about_the_app" />

                <TextView
                    android:id="@+id/view_on_git_hub"
                    style="@style/InfoItem"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/info_item_height"
                    android:text="@string/view_on_git_hub" />

                <include layout="@layout/item_divider" />

                <TextView
                    android:id="@+id/share"
                    style="@style/InfoItem"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/info_item_height"
                    android:text="@string/share" />

            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>
